--- a/src/AVOne.Server/Shared/Navigation.razor
+++ b/src/AVOne.Server/Shared/Navigation.razor
@@ -50,7 +50,7 @@
                     <ChildContent>
                         @foreach (var navChild in nav.Children)
                         {
-                            @if (NavHelper.CurrentUri.EndsWith(navChild.Href))
+                            @if (NavHelper.CurrentUri.EndsWith(navChild.Href!))
                             {
                                 <MBorder Value=false Width=4 Class="rounded-r-1" Border="Borders.Right">
                                     <MListItem Ripple=false ActiveClass="fill-lighten-1" Link Href="@navChild.Href">
