--- a/src/AVOne.Server/Pages/App/Settings/SystemSettings.razor
+++ b/src/AVOne.Server/Pages/App/Settings/SystemSettings.razor
@@ -82,7 +82,7 @@
                             <MTextField Value="@(ApplicationPaths.LogDirectoryPath)" Label="@(I18n.T("Settings.System.Paths.LogDirectoryPath"))" Outlined Readonly TValue="string" />
                         </MCol>
                         <MCol Md=12 Sm=12>
-                            <MTextField Value="@(ApplicationPaths.CachePath)" Label="@(I18n.T("Settings.System.Paths.CachePathPath"))" Outlined Readonly TValue="string" />
+                            <MTextField Value="@(ApplicationPaths.CachePath)" Label="@(I18n.T("Settings.System.Paths.CachePath"))" Outlined Readonly TValue="string" />
                         </MCol>
                     </MRow>
                 </MCardText>
