--- a/src/AVOne.Server/Pages/App/Settings/PluginSettings.razor
+++ b/src/AVOne.Server/Pages/App/Settings/PluginSettings.razor
@@ -73,8 +73,71 @@
                 </MContainer>
             </MTabItem>
             <MTabItem>
+                <MContainer Fluid>
+                    <MRow Dense>
+                        @foreach (var package in PackageInfos)
+                    {
+                            <MCol key="@package.Id" Cols="3" >
+                                <MCard Class="mx-auto my-12" MaxWidth="468" Elevation=8>
+                                    @if (!string.IsNullOrWhiteSpace(package.ImageUrl))
+                                    {
+                                        <MImage Src=@package.ImageUrl Class="white--text align-end" Height=180 Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
+                                            <MCardTitle>@package.Name</MCardTitle>
+                                        </MImage>
+                                    }
+                                    else
+                                    {
+                                        <MImage Src="https://cdn.masastack.com/stack/images/website/masa-blazor/parallax/material.jpg" Class="white--text align-end" Height=180 Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
+                                            <MCardTitle>@package.Name</MCardTitle>
+                                        </MImage>
+                                    }
+
+                                        <Masa.Blazor.Presets.PBlockText Primary="@package.Description" Tags="@GetPackageTags(package)" Class="pa-2" style="max-width: 300px;"></Masa.Blazor.Presets.PBlockText>
+                            </MCard>
+                            </MCol>
+                    }
+                </MRow>
+                </MContainer>
             </MTabItem>
             <MTabItem>
+                <div class="md-flex flex-no-wrap justify-start">
+                    <span class="text-h5">@T("Settings.Plugin.PluginRepository.Title")</span>
+                    
+                        <MDialog
+        @bind-Value="addRepoDialog"
+        Width="500">
+        <ActivatorContent>
+            <MButton  @attributes="@context.Attrs" Outlined Class="ml-2" Icon><MIcon Dark>mdi-plus</MIcon></MButton>
+             </ActivatorContent>
+        <ChildContent>
+               <MCard>
+                 <MForm Model="_addRepoModel" EnableValidation OnValidSubmit="HandleOnValidSubmit" 
+                                         OnInvalidSubmit="HandleOnInvalidSubmit">
+                <MCardTitle>
+                    <span class="text-h5">@T("Settings.Plugin.PluginRepository.AddRepo")</span>
+                </MCardTitle>
+                    <MCardText>
+
+                <MTextField @bind-Value="_addRepoModel.Name"
+                Counter="20"
+                Label='@T("Settings.Plugin.PluginRepository.RepoName")' Hint='@T("Settings.Plugin.PluginRepository.RepoNameHint")' PersistentHint
+                            Outlined></MTextField>
+                <MTextField @bind-Value="_addRepoModel.RepoUrl"
+                Label='@T("Settings.Plugin.PluginRepository.RepoUrl")' Hint='@T("Settings.Plugin.PluginRepository.RepoUrlHint")' PersistentHint
+                            Outlined></MTextField>
+                          
+
+                    </MCardText>
+                    <MCardActions Class="justify-end">
+                        <MButton Type="reset" @onclick="()=> {addRepoDialog = false;}">@T("Common.Cancel")</MButton>
+                        <MButton Type="submit" Color="primary">@T("Common.Submit")</MButton>
+                    </MCardActions>
+                 </MForm>
+                </MCard>
+           
+                    </ChildContent>
+    </MDialog>
+                </div>
             </MTabItem>
         </MTabs>
     </MCardText>
@@ -82,4 +145,28 @@
 
 @code {
 
+    bool addRepoDialog;
+    class AddRepoModel
+    {
+        [Required]
+        [MaxLength(10, ErrorMessage = "Name must be less than 10 characters")]
+        public string Name { get; set; }
+        [Required]
+        [Url]
+        public string RepoUrl { get; set; }
+    }
+
+    private bool _valid = true;
+    private MForm _form;
+    private AddRepoModel _addRepoModel = new();
+
+    private void HandleOnValidSubmit()
+    {
+        //valid
+    }
+
+    private void HandleOnInvalidSubmit()
+    {
+        //invalid
+    }
 }
