--- a/src/AVOne.Server/Pages/_Layout.cshtml
+++ b/src/AVOne.Server/Pages/_Layout.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AVOne.Server</title>
-    <link rel="shortcut icon" href="https://cdn.masastack.com/stack/images/logo/MASAStack/logo16_16.png">
+    <link rel="shortcut icon" href="img/logo/favicon.ico">
     <base href="~/" />
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet">
     <link href="css/materialdesign/v6.x/css/materialdesignicons.min.css" rel="stylesheet">
