--- a/src/AVOne.Server/Pages/App/Downloads/Tasks.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/Tasks.razor
@@ -1,7 +1,7 @@
 ﻿@page "/app/downloads/tasks"
 @inherits ProCompontentBase
 <MCard>
-    <MCardTitle>ce1</MCardTitle>
+    <MCardTitle>@T("Download.Tasks.Title")</MCardTitle>
     <MCardText>
     </MCardText>
 </MCard>
